methods.picture.MethodsPicture.scala.error
Compilation error:
MethodsPicture:29: error: not found: value color
  var y=color.yellow
        ^MethodsPicture:30: error: not found: value color
  var r=color.red
        ^MethodsPicture:31: error: not found: value color
  var b=color.blue
        ^MethodsPicture:32: error: not found: value color
  var g=color.green
        ^